pagina de metal

--- a/discografias/discografia-death.html
+++ b/discografias/discografia-death.html
@@ -54,7 +54,7 @@
                 <img src="../albums/scream_bloody_gore.jpg" alt="Scream Blody Gore">
                 <p>Scream Bloody Gore es el álbum de estudio debut dela banda estadounidense de death metal Death, 
                     lanzado el 25 de mayo de 1987 por Combat Records. Muchos lo consideran «el primer disco verdadero de death metal». Chuck Schuldiner, el fundador y líder de la banda, 
-                    tocó la guitarra, el bajo y la voz, y compuso todas las pistas del álbum. <br><span>Nombre del album: Scream Bloody Gore</span> <br><span>Escucha el album completo aqui! <a href="https://deezer.page.link/mtpEY8CeRVwYGJTKA">Album</a></span></p>
+                    tocó la guitarra, el bajo y la voz, y compuso todas las pistas del álbum. <br><span>Nombre del album: Scream Bloody Gore</span> <br><span>Escucha el album completo aqui! <a href="https://deezer.page.link/mtpEY8CeRVwYGJTKA"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Scream Bloody Gore</h1>
             </div>
             <br>
@@ -68,7 +68,7 @@
                     El álbum es notable por su tono y calidad diferentes al debut de la banda, 
                     es el primer ejemplo del trabajo de Scott Burns que se escucha en muchos de los álbumes de death metal y grindcore de esa época. 
                     La portada aparece en Metal: A Headbanger's Journey. 
-                    Es el primer álbum en el que aparece el baterista Bill Andrews y el único en el que aparece el guitarrista Rick Rozz. <br><span>Nombre del album: Leprosy</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uQEULvzLJHRdjaKp6">Album</a></span></p>
+                    Es el primer álbum en el que aparece el baterista Bill Andrews y el único en el que aparece el guitarrista Rick Rozz. <br><span>Nombre del album: Leprosy</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uQEULvzLJHRdjaKp6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Leprosy</h1>
             </div>
             <br>
@@ -79,7 +79,7 @@
                 <img src="../albums/spiritual-healing.jpg" alt="Spiritual Healing">
                 <p>Spiritual Healing es el tercer álbum de estudio de labanda estadounidense de death metal Death , lanzado el 16 de febrero de 1990 por Combat Records. 
                     Es el único álbum de la banda en el que participan tanto el guitarrista James Murphy 
-                    como el bajista Terry Butler y el último en el que participa el baterista Bill Andrews. <br><span>Nombre del album: Spiritual Healing</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/6855G9nakv51VQv5A">Album</a></span></p>
+                    como el bajista Terry Butler y el último en el que participa el baterista Bill Andrews. <br><span>Nombre del album: Spiritual Healing</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/6855G9nakv51VQv5A"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Spiritual Healing</h1>
             </div>
             <br>
@@ -91,7 +91,7 @@
                 <p>Human es el cuarto álbum de estudio de labanda estadounidense de death metal Death, 
                     lanzado el 22 de octubre de 1991 por Relativity Records. 
                     El álbum marcó el comienzo de un importante cambio estilístico para Death, siendo técnicamente más complejo y progresivo que los trabajos anteriores de la banda. Las letras son más introspectivas en comparación con lasletras basadas en gore de Scream Bloody Gore y Leprosy o el comentario social de Spiritual Healing . Este nuevo estilo continuaría evolucionando en todos los álbumes posteriores de Death. Este es el único álbum que presentaa los miembros de Cynic Paul Masvidal en guitarras y Sean Reinert en batería, 
-                    ambos de 20 años en ese momento, y el primero en presentar al bajista Steve DiGiorgio. <br><span>Nombre del album: Human</span> <br><span>Escuchalo completo aqui! > <a href="https://deezer.page.link/KxWzAsjEKPRWHc4t6">Album</a></span></p>
+                    ambos de 20 años en ese momento, y el primero en presentar al bajista Steve DiGiorgio. <br><span>Nombre del album: Human</span> <br><span>Escuchalo completo aqui! > <a href="https://deezer.page.link/KxWzAsjEKPRWHc4t6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Human</h1>
             </div>
             <br>
@@ -105,7 +105,7 @@
                     Es el único álbum de la banda en el que aparece el guitarrista Andy LaRocque, 
                     el primero en el que aparece el baterista Gene Hoglan y el segundo y último en el que aparece el bajista Steve DiGiorgio. 
                     El mánager Eric Greif describió el álbum como "un disco enojado, enojado líricamente", 
-                    atribuyéndolo a su conflicto con Chuck Schuldiner en ese momento. <br><span>Nombre del album: individual thought patterns</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/BxbpSeux8ZCqWLD49">Album</a></span></p>
+                    atribuyéndolo a su conflicto con Chuck Schuldiner en ese momento. <br><span>Nombre del album: individual thought patterns</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/BxbpSeux8ZCqWLD49"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Individual Thought Patterns</h1>
             </div>
             <br>
@@ -118,7 +118,7 @@
                     lanzado el 21 de marzo de 1995 por Roadrunner Records. 
                     El álbum fue remasterizado y reeditado el 1 de abril de 2008, con cinco pistas adicionales. 
                     Es el único álbum que cuenta con Bobby Koelble y Kelly Conlon en guitarra y bajo, respectivamente, y el segundo y último álbum que cuenta con el baterista Gene Hoglan. 
-                    El álbum ha recibido elogios unánimes de la crítica. <br><span>Nombre del album: Symbolic</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/D9S7huuYkcKMHzmz6">Album</a></span></p>
+                    El álbum ha recibido elogios unánimes de la crítica. <br><span>Nombre del album: Symbolic</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/D9S7huuYkcKMHzmz6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Symbolic</h1>
             </div>
             <br>
@@ -133,7 +133,7 @@
                     es el único álbum que presenta al guitarrista Shannon Hamm , al baterista Richard Christy y al bajista Scott Clendenin. 
                     También es el último lanzamiento comercial de Death, 
                     ya que Chuck Schuldiner moriría debido a problemas relacionados con el cáncer cerebral en 2001, 
-                    y Death posteriormente se disolvería. <br><span>Nombre del album: The sound of Perseverance</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/UQEaKHwcBWhjBsfB6">Album</a></span></p>
+                    y Death posteriormente se disolvería. <br><span>Nombre del album: The sound of Perseverance</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/UQEaKHwcBWhjBsfB6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>The Sound of Perseverance</h1>
             </div>
             <br>
