--- a/discografias/discografia-lamb.html
+++ b/discografias/discografia-lamb.html
@@ -60,7 +60,7 @@
                 <img src="../albums/american-gospel.jpg" alt="New American Gospel">
                 <p>New American Gospel es el segundo álbum de estudio de labanda estadounidense de heavy metal Lamb of God , así como su primer álbum bajo ese nombre (originalmente eran conocidos como Burn the Priest). Fue lanzado en 2000 a través de Prosthetic Records. 
                     New American Gospel es también el primer lanzamiento con Willie Adler en la guitarra, 
-                    quien reemplazó a Abe Spear. <br><span>Nombre del album: New American Gospel</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/6S2RyjdoTS5fafUR8">Album</a></span></p>
+                    quien reemplazó a Abe Spear. <br><span>Nombre del album: New American Gospel</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/6S2RyjdoTS5fafUR8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     
                     <h1>New American Gospel</h1>
             </div>
@@ -73,7 +73,7 @@
                 <p>As the Palaces Burn es el tercer álbum de estudio dela banda estadounidense de heavy metal Lamb of God, 
                     lanzado bajo Prosthetic Records el 6 de mayo de 2003. El álbum fue producido por Devin Townsend y la propia banda, 
                     y recibió considerablemente más difusión que su trabajo anterior, con tres sencillos. En 2013, 
-                    As The Palaces Burn ha vendido 270.000 copias desde su lanzamiento original, según Nielsen SoundScan. <br><span>Nombre del album: As the places burn</span> <br><span>Escuchalo completo aqui! > <a href="https://deezer.page.link/ohHDqdw3EtB5a5jq5">Album</a></span></p>
+                    As The Palaces Burn ha vendido 270.000 copias desde su lanzamiento original, según Nielsen SoundScan. <br><span>Nombre del album: As the places burn</span> <br><span>Escuchalo completo aqui! > <a href="https://deezer.page.link/ohHDqdw3EtB5a5jq5"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>As the places burn</h1>
             </div>
             <br>
@@ -87,7 +87,7 @@
                     Este álbum también fue calificado por Metal Hammer como el quinto mejor álbum de metal del siglo XXI. 
                     El álbum se inspiró en los eventos que tuvieron lugar durante la guerra en Irak con canciones como "Ashes of the Wake" (que incluye fragmentos del ex sargento de la Marina Jimmy Massey en una entrevista después de su regreso de la guerra de Irak), "Now You've Got Something to Die For", "One Gun" y "The Faded Line". La cita al comienzo de "Omerta" es una paráfrasis del código de silencio de la mafia siciliana. 
                     En agosto de 2010, Ashes of the Wake había vendido 398.000 copias en los Estados Unidos. Diez años después de su lanzamiento, en 2014, las ventas superaron las 400.000 copias vendidas y es el disco más vendido de Lamb of God. 
-                    El álbum fue certificado oro por la Recording Industry Association of America en febrero de 2016. <br><span>Nombre del album: Ashes of the wake</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/AbnneDmgRDrmvXaA8">Album</a></span></p>
+                    El álbum fue certificado oro por la Recording Industry Association of America en febrero de 2016. <br><span>Nombre del album: Ashes of the wake</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/AbnneDmgRDrmvXaA8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Ashes of the wake</h1>
             </div>
             <br>
@@ -99,7 +99,7 @@
                 <p>Sacrament es el quinto álbum de estudio de la bandaestadounidense de heavy metal Lamb of God. 
                     Lanzado el 22 de agosto de 2006, Sacrament debutó en el puesto número 8 de la lista Billboard 200 con unas ventas de 63.000 copias en la primera semana. 
                     El álbum fue el álbum de heavy metal más vendido de 2006 y recibió el premio Álbum del año de la revista Revolver . A partir de 2010, ha vendido más de 331.000 copias en los Estados Unidos, 
-                    y fue certificado Oro por la RIAA el 27 de septiembre de 2019. <br><span>Nombre del album: Sacrament</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/kx2ZaC8MJMLSXHkU6s">Album</a></span></p>
+                    y fue certificado Oro por la RIAA el 27 de septiembre de 2019. <br><span>Nombre del album: Sacrament</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/kx2ZaC8MJMLSXHkU6s"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Sacrament</h1>
             </div>
             <br>
@@ -113,7 +113,7 @@
                     Japón y Australia, y el 24 de febrero de 2009 a través de Epic Records en los EE. UU. y Canadá. 
                     Alcanzó el puesto número 2 en el Billboard 200 , convirtiéndose en el álbum más exitoso de la banda en la lista, 
                     y vendió 68.000 unidades en los EE. UU. durante su primera semana de lanzamiento. 
-                    A partir de 2010, ha vendido más de 202.000 copias en los Estados Unidos.  <br><span>Nombre del album: Wrath</span>  <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/7g43dY7PDwiWfG4b6">Album</a></span></p>
+                    A partir de 2010, ha vendido más de 202.000 copias en los Estados Unidos.  <br><span>Nombre del album: Wrath</span>  <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/7g43dY7PDwiWfG4b6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Wrath</h1>
             </div>
             <br>
@@ -126,7 +126,7 @@
                     Además de la edición normal, un disco doble estuvo disponible en el Reino Unido para preordenar por tiempo limitado, 
                     que contenía un álbum extra de 12 pistas en vivo titulado " Wrath - Tour 2009/2010", que solo estaba disponible a través de Amazon.co.uk , Play.com y HMV. El sencillo principal, titulado "Ghost Walking", 
                     fue lanzado el 5 de diciembre de 2011. El álbum debutó en el número 3 en el Billboard 200 y el número 1 en el Rock Chart. El álbum vendió alrededor de 52,000 copias en los EE. UU. durante la primera semana de lanzamiento. 
-                    El álbum ha vendido 161,000 copias en los EE. UU. a junio de 2015. <br><span>Nombre del album: Resolution</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Zozd7nGkfXtAzxfN8">Album</a></span></p>
+                    El álbum ha vendido 161,000 copias en los EE. UU. a junio de 2015. <br><span>Nombre del album: Resolution</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Zozd7nGkfXtAzxfN8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Resolution</h1>
             </div>
             <br>
@@ -138,7 +138,7 @@
                 <p>VII: Sturm und Drang es el octavo álbum de estudio de labanda estadounidense de heavy metal Lamb of God (el "VII" del título ignora el álbum grabado bajo el nombre de Burn the Priest con una formación ligeramente diferente). 
                     El álbum fue lanzado el 24 de julio de 2015, a través de Epic Records en América del Norte y a través de Nuclear Blast fuera de América del Norte. 
                     Es el último álbum de Lamb of God de material original que presenta al baterista Chris Adler, 
-                    quien dejó la banda en 2019. <br><span>Nombre del album: VII: Sturm and Drang</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/awkwmX89WwDrm3AT9">Album</a></span></p>
+                    quien dejó la banda en 2019. <br><span>Nombre del album: VII: Sturm and Drang</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/awkwmX89WwDrm3AT9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>VII: Sturm and Drang</h1>
             </div>
             <br>
@@ -153,7 +153,8 @@
                     Lamb of God marca el primer álbum de estudio con material completamente nuevo de la banda desde VII: Sturm und Drang de 2015, 
                     lo que lo convierte en la brecha más larga entre sus álbumes y el primero en presentar a Art Cruz como reemplazo del baterista original Chris Adler , quien dejó la banda en julio de 2019. 
                     Lamb of God fue producido una vez más por el colaborador de mucho tiempo Josh Wilbur, 
-                    quien ha trabajado con la banda desde Sacrament de 2006. <br><span>Nombre del album: Lamb of god</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/6DssDhW4ezREpyfu6">Album</a></span></p>
+                    quien ha trabajado con la banda desde Sacrament de 2006. <br><span>Nombre del album: Lamb of god</span> <br><span>Escucha el album completo aqui! > <a href=""><i class="fa-brands fa-spotify"></i></a></span></p>
+                    
                     <h1>Lamb of god</h1>
             </div>
             <br>
@@ -166,7 +167,7 @@
                     Fue producido por Josh Wilbur, quien ha colaborado con la banda desde 2006.
                     Omens vendió 19.000 copias en su primera semana, incluidas 5.100 en vinilo. 
                     Debutó en el puesto n.° 15 del Billboard 200, y también debutó en el n.° 1 de Top Hard Rock Albums, 
-                    el n.° 3 de Album Sales, el n.° 3 de Top Rock Albums y el n.° 5 de Vinyl Albums <br><span>Nombre del album: Omens</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/eZHd6aEnSTJXCSn87">Album</a></span></p>
+                    el n.° 3 de Album Sales, el n.° 3 de Top Rock Albums y el n.° 5 de Vinyl Albums <br><span>Nombre del album: Omens</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/eZHd6aEnSTJXCSn87"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Omens</h1>
             </div>
             <br>
