--- a/discografias/discografia-megadeth.html
+++ b/discografias/discografia-megadeth.html
@@ -68,7 +68,7 @@
                     la música heavy metal.
                     Explora temas de muerte, ocultismo y violencia. <br><span>Nombre del Album: Killing Is My
                         Business... and Business Is Good!</span> <br><span>Escuha el album completo aqui! > <a
-                            href="https://deezer.page.link/jaguh9Tka6GnEbMv5">Album</a></span></p>
+                            href="https://deezer.page.link/jaguh9Tka6GnEbMv5"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Killing Is My Business... and Business Is Good!</h1>
             </div>
             <br>
@@ -89,7 +89,7 @@
                     álbum por abuso de drogas,
                     lo que convirtió a Peace Sells Samuelson en el último álbum de Megadeth <br><span>Nombre del album:
                         Peace Sells But Who's Buying</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/W78yPEWDX76FmBca6">Album</a></span></p>
+                            href="https://deezer.page.link/W78yPEWDX76FmBca6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Peace Sells... but Who's Buying?</h1>
             </div>
             <br>
@@ -108,7 +108,7 @@
                     líricamente, el líder y guitarrista Dave Mustaine aborda una variedad de temas,
                     incluido el holocausto nuclear y la libertad de expresión. <br><span>Nombre del album: So Far, So
                         Good... So What!</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/j58MKMTYLpGZwdTv7">Album</a></span></p>
+                            href="https://deezer.page.link/j58MKMTYLpGZwdTv7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>So Far, So Good... So What!</h1>
             </div>
             <br>
@@ -124,7 +124,7 @@
                     « Holy Wars... The Punishment Due » fueron lanzadas como sencillos.
                     En 2004 se lanzó una versión remezclada y remasterizada del álbum con cuatro pistas adicionales.
                     <br><span>Nombre del Album: Rust in Peace <br><span>Escucha el album completo aqui! > <a
-                                href="https://deezer.page.link/VioiToKDkCpwWG3K8">Album</a></span></span></p>
+                                href="https://deezer.page.link/VioiToKDkCpwWG3K8"><i class="fa-brands fa-spotify"></i></a></span></span></p>
                 <h1>Rust in Peace</h1>
             </div>
             <br>
@@ -143,7 +143,7 @@
                     o' My Teeth ",
                     que disfrutaron de un éxito significativo en las listas y tuvieron un gran impacto musical.
                     <br><span>Nombre del album: Countdown to Extinction</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/MXTQ2yrPRz3TnxF3A">Album</a></span></p>
+                            href="https://deezer.page.link/MXTQ2yrPRz3TnxF3A"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Countdown To Extinction</h1>
             </div>
             <br>
@@ -160,7 +160,7 @@
                     sus pies en un tendedero aparentemente interminable,
                     una referencia directa a una línea en la canción principal. <br><span>Nombre del album:
                         Youthanasia</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/84zhQ5raAHSnzuVy8">Album</a></span></p>
+                            href="https://deezer.page.link/84zhQ5raAHSnzuVy8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Youthanasia</h1>
             </div>
             <br>
@@ -183,7 +183,7 @@
                     ,
                     quienes notaron que la banda se alejaba de susraíces de thrash metal. <br><span>Nombre del album:
                         Cryptic Writings</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/BtBykvBXo6kmeSeWA">Album</a></span></p>
+                            href="https://deezer.page.link/BtBykvBXo6kmeSeWA"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Cryptic Writings</h1>
 
             </div>
@@ -204,7 +204,7 @@
                     desviación del sonido tradicional de la banda.
                     La reacción finalmente resultó en que la banda regresara a un sonido más pesado con su próximo
                     álbum. <br><span>Nombre del album: Risk</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/UUqp2cAPQivNSsT58">Album</a></span></p>
+                            href="https://deezer.page.link/UUqp2cAPQivNSsT58"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Risk</h1>
             </div>
             <br>
@@ -222,7 +222,7 @@
                     Posteriormente,
                     el álbum se ubicó en el puesto número 16 en el Billboard 200 tras su lanzamiento. <br><span>Nombre
                         del album: The World Needs A Hero</span> <br><span>Escuah el album completo aqui! > <a
-                            href="https://deezer.page.link/ztTwc97TAvLXtP4L7">Album</a></span></p>
+                            href="https://deezer.page.link/ztTwc97TAvLXtP4L7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The World Needs a Hero</h1>
             </div>
             <br>
@@ -242,7 +242,7 @@
                     and Peace Sells... but Who's Buying? (1986),
                     as well as session drummer Vinnie Colaiuta and bassist Jimmie Lee Sloas. <br><span>Nombre del Album:
                         The System Has Failed</span> <br><span>Escucha el album comleto aqui! > <a
-                            href="https://deezer.page.link/Ggxhnh2YRuQY5wYT6">Album</a></span></p>
+                            href="https://deezer.page.link/Ggxhnh2YRuQY5wYT6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The System Has Failed</h1>
             </div>
             <br>
@@ -263,7 +263,7 @@
                     reemplazado por Chris Broderick,
                     dejando este como el único álbum de estudio de Megadeth al que contribuyó. <br><span>Nombre del
                         album: United Abominations</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/WKsvMR4EKeyAmDY4A">Album</a></span></p>
+                            href="https://deezer.page.link/WKsvMR4EKeyAmDY4A"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>United Abominations</h1>
             </div>
             <br>
@@ -281,7 +281,7 @@
                     James LoMenzo hasta que se reincorporó después de The Sick, The Dying, and The Dead de 2022 ,
                     ya que el bajista original David Ellefson se reincorporó a la banda varios meses despuésdel
                     lanzamiento de Endgame. <br><span>Nombre del album: End Game</span> <br><span>Escucha el album
-                        completo aqui! > <a href="https://deezer.page.link/J4csH52uLW4EkQrY6">Album</a></span></p>
+                        completo aqui! > <a href="https://deezer.page.link/J4csH52uLW4EkQrY6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>End Game</h1>
             </div>
             <br>
@@ -302,7 +302,7 @@
                     Estados Unidos hasta diciembre de 2012.
                     El álbum ha recibido críticas positivas de los críticos. <br><span>Nombre del album: Thirteen</span>
                     <br><span>Escuha el album completo aqui! > <a
-                            href="https://deezer.page.link/pVagEkwZLLbUGABE9 ">Album</a></span></p>
+                            href="https://deezer.page.link/pVagEkwZLLbUGABE9 "><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Thirteen</h1>
             </div>
             <br>
@@ -319,7 +319,7 @@
                     una aparición especial delvocalista de Disturbed, David Draiman . El 23 de abril de 2013,
                     la canción principal fue lanzada en iTunes como el sencillo principal del álbum. <br><span>Nombre
                         del album: Super Collider</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/g58yESaZ22UfYDrP8">Album</a></span></p>
+                            href="https://deezer.page.link/g58yESaZ22UfYDrP8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Super Collider</h1>
             </div>
             <br>
@@ -336,7 +336,7 @@
                     el único álbum con el baterista Chris Adler y el último con el bajista David Ellefson . El álbum fue
                     producido por Mustaine y Chris Rakestraw y cuenta con una portada de Brent Elliot White.
                     <br><span>Nombre del Album: Dystopia</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/r6pVVHRgeSfcwwq86">Album</a></span></p>
+                            href="https://deezer.page.link/r6pVVHRgeSfcwwq86"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Dystopia</h1>
             </div>
             <br>
@@ -355,7 +355,7 @@
                     studio albums in the band's career.
                     The album was produced by Mustaine and Chris Rakestraw. <br><span>Nombre del album:The Sick, the
                         Dying... and the Dead!</span><br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/RXSuS7mAjLXuoY3D6">Album</a></span></p>
+                            href="https://deezer.page.link/RXSuS7mAjLXuoY3D6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The Sick, the Dying... and the Dead!</h1>
             </div>
             <br>
