--- a/discografias/discografia-metallica.html
+++ b/discografias/discografia-metallica.html
@@ -58,7 +58,7 @@
                     lanzado el 25 de julio de 1983 a través del sello independiente Megaforce Records. 
                     Después de formarse en 1981, Metallica comenzó a tocar en clubes locales de Los Ángeles. 
                     Grabaron varios demos para llamar la atención de los dueños de los clubes y finalmente se mudaron a San Francisco para asegurar los servicios del bajista Cliff Burton . La cinta de demostración No Life 'til Leather (1982) del grupo fue notada por el jefe del sello Megaforce, Jon Zazula 
-                     <br><span>Nombre de album: Kill Em All</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/jhs7Sga8uuTDAe2H8">Album</a></span></p>
+                     <br><span>Nombre de album: Kill Em All</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/jhs7Sga8uuTDAe2H8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Kill Em All</h1>
             </div>
             <br>
@@ -72,7 +72,7 @@
                     El álbum fue grabado en tres semanas con el productor Flemming Rasmussen en Sweet Silence Studios en Copenhague, 
                     Dinamarca. La obra de arte, basada en un concepto de la banda, muestra una silla eléctrica siendo golpeada por un rayo que fluye desde el logotipo de la banda. 
                     El título fue tomado de un pasaje de la novela The Stand de Stephen King, 
-                    en el que un personaje usa la frase para referirse a la ejecución en la silla eléctrica. <br><span>Nombre del album: Ride the lighting</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/GufSD2sfcyamvjMw6">Album</a></span></p>
+                    en el que un personaje usa la frase para referirse a la ejecución en la silla eléctrica. <br><span>Nombre del album: Ride the lighting</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/GufSD2sfcyamvjMw6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Ride the lighting</h1>
             </div>
             <br>1
@@ -84,7 +84,7 @@
                 <p> es el tercer álbum de estudio de labanda estadounidense de trash metal Metallica, 
                     lanzado el 3 de marzo de 1986 por Elektra Records. Grabado en Copenhague, Dinamarca, en Sweet Silence Studios con el productor Flemming Rasmussen, 
                     fue el último álbum de la banda en el que participó el bajista Cliff Burton, 
-                    quien murió en un accidente de autobús en Suecia durante la gira promocional del álbum. <br><span>Nombre del album: Master of Puppets</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/eHnTZwtaLdZLAVQY7">Album</a></span></p>
+                    quien murió en un accidente de autobús en Suecia durante la gira promocional del álbum. <br><span>Nombre del album: Master of Puppets</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/eHnTZwtaLdZLAVQY7"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Master of Puppets</h1>
             </div>
             <br>
@@ -96,7 +96,7 @@
                 <p>...And Justice for All es el cuarto álbum de estudio dela banda estadounidense de trash metal Metallica, 
                     lanzado el 25 de agosto de 1988 por Elektra Records . Fue el primer álbum de Metallica en el que participó el bajista Jason Newsted, 
                     tras la muerte de su bajista anterior Cliff Burton en 1986. Burton recibió crédito póstumo como coautor de "To Live Is to Die", 
-                    ya que Newsted siguió las líneas de bajo que Burton había grabado antes de su muerte. <br><span>Nombre del album: ...And Justice For All</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/PiLpvDVKo6JSYJwN9">Album</a></span></p>
+                    ya que Newsted siguió las líneas de bajo que Burton había grabado antes de su muerte. <br><span>Nombre del album: ...And Justice For All</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/PiLpvDVKo6JSYJwN9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>And justice for all</h1>
             </div>
             <br>
@@ -108,7 +108,7 @@
                 <p>Metallica (comúnmente conocido como The Black Album ) es el quinto álbum de estudio dela banda estadounidense de trash metal Metallica. 
                     Fue lanzado el 12 de agosto de 1991 por Elektra Records. 
                     Las sesiones de grabación se llevaron a cabo en One on One Recording Studios en Los Ángeles durante un lapso de ocho meses en el que Metallica frecuentemente se encontró en desacuerdo con su nuevo productor Bob Rock. 
-                    El álbum marcó un cambio en la música de la banda del estilo thrash metal de sus cuatro álbumes anteriores a un sonido más lento, más pesado y más refinado. <br><span>Nombre del album: Metallica</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/CNUy7NnpddgN9j8m6">Album</a></span></p>
+                    El álbum marcó un cambio en la música de la banda del estilo thrash metal de sus cuatro álbumes anteriores a un sonido más lento, más pesado y más refinado. <br><span>Nombre del album: Metallica</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/CNUy7NnpddgN9j8m6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Metallica - Black Album</h1>
             </div>
             <br>
@@ -120,7 +120,7 @@
                 <p>Load es el sexto álbum de estudio dela banda estadounidense de trash metal Metallica, 
                     lanzado el 4 de junio de 1996 por Elektra Records en Estados Unidos y por Vertigo Records a nivel internacional. El álbum mostró más un lado hard rock de Metallica que el estilo típico de thrash metal de la banda 
                     que alienó a gran parte de la base de fans de la banda. También presentó influencias de géneros como el rock sureño , el blues rock , el country rock, y el rock alternativo. El baterista Lars Ulrich dijo sobre la naturaleza más exploratoria de Load : "Este álbum y lo que estamos haciendo con él, eso, para mí, es de lo que se trata Metallica: explorar cosas diferentes. En el momento en que dejas de explorar, simplemente te sientas y mueres".  
-                    Con 79 minutos, Load es el álbum de estudio más largo de Metallica.s <br><span>Nombre del album: Load</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/hE6Ex1KHKTX49SSYA">Album</a></span></p>
+                    Con 79 minutos, Load es el álbum de estudio más largo de Metallica.s <br><span>Nombre del album: Load</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/hE6Ex1KHKTX49SSYA"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Load</h1>
             </div>
             <br>
@@ -133,7 +133,7 @@
                     lanzado el 18 de noviembre de 1997, a través de Elektra Records . El álbum es una continuación de Load, 
                     lanzado el año anterior, y el último álbum de estudio de Metallica en el que aparece el bajista Jason Newsted. 
                     Reload debutó en el número uno del Billboard 200 , vendiendo 436.000 copias en su primera semana. 
-                    Fue certificado 3× platino por la Recording Industry Association of America (RIAA) por enviar tres millones de copias en los Estados Unidos. <br><span>Nombre del album: Reload</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/iubWuj9EdT9hLDdb6">Album</a></span></p>
+                    Fue certificado 3× platino por la Recording Industry Association of America (RIAA) por enviar tres millones de copias en los Estados Unidos. <br><span>Nombre del album: Reload</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/iubWuj9EdT9hLDdb6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Reload</h1>
             </div>
             <br>
@@ -145,7 +145,7 @@
                 <p>St. Anger es el octavo álbum de estudio dela banda estadounidense de trash metal Metallica, 
                     lanzado el 5 de junio de 2003. Fue el último álbum de Metallica lanzado a través de Elektra Records y la colaboración final entre Metallica y el productor Bob Rock, 
                     con quien la banda había trabajado desde 1990. Este es también el único álbum de Metallica como trío oficial, ya que el bajista Jason Newsted dejó la banda antes de las sesiones de grabación. Rock tocó el bajo en lugar de Newsted, y Robert Trujillo se unió a la banda después de su finalización. Aunque no toca en el álbum, 
-                    Trujillo está acreditado en las notas del álbum y aparece en fotos con la banda en el libreto del álbum. <br><span>Nombre del Album: St Anger</span> <br><span>Si quieres escuchalo completo aqui! > <a href="https://deezer.page.link/Ma5mQy6S4jGANPU69">Album</a></span></p>
+                    Trujillo está acreditado en las notas del álbum y aparece en fotos con la banda en el libreto del álbum. <br><span>Nombre del Album: St Anger</span> <br><span>Si quieres escuchalo completo aqui! > <a href="https://deezer.page.link/Ma5mQy6S4jGANPU69"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>St Anger</h1>
             </div>
             <br>
@@ -157,7 +157,7 @@
                 <p>Death Magnetic es el noveno álbum de estudio dela banda estadounidense de trash metal Metallica, 
                 lanzado el 12 de septiembre de 2008 a través de Warner Bros. Records. El álbum fue producido por Rick Rubin, 
                 lo que marca el primer álbum de la banda desde ...And Justice for All (1988) que no es producido por su colaborador de siempre Bob Rock y coproducido por Hetfield y Ulrich. También es el primer álbum de Metallica con el bajista Robert Trujillo, 
-                y el segundo en compartir el crédito de composición con todos los miembros de la banda. <br><span>Nombre del album: Death Magnetic</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/9mRDghAPuFXNH55d7">Album</a></span></p>
+                y el segundo en compartir el crédito de composición con todos los miembros de la banda. <br><span>Nombre del album: Death Magnetic</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/9mRDghAPuFXNH55d7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Death Magnetic</h1>
             </div>
             <br>
@@ -170,7 +170,7 @@
                     lanzado como álbum doble el 18 de noviembre de 2016 por el sello discográfico de la banda, Blackened Recordings. 
                     Fue el primer álbum de estudio de Metallica en ocho años después de Death Magnetic (2008), 
                     marcando la brecha más larga entre álbumes de estudio en la carrera de la banda, y su primer álbum de estudio lanzado a través de Blackened. 
-                    El álbum fue producido por Greg Fidelman , quien diseñó y mezcló Death Magnetic. <br><span>Nombre del album: Hardwired to self destruct</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/UrULXvvdXTVFFuuJ9">Album</a></span></p>
+                    El álbum fue producido por Greg Fidelman , quien diseñó y mezcló Death Magnetic. <br><span>Nombre del album: Hardwired to self destruct</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/UrULXvvdXTVFFuuJ9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Hardwired to self destruct</h1>
             </div>
             <br>
@@ -181,7 +181,7 @@
                 <img src="../albums/72-season.jpg" alt="72 Seasons">
                 <p>72 Seasons es el undécimo álbum de estudio de la banda estadounidense de trash metal Metallica, 
                     lanzado el 14 de abril de 2023 por su propio sello discográfico Blackened Recordings. 72 Seasons fue producido por Greg Fidelman , quien produjo el álbum de estudio anterior de la banda, Hardwired... to Self-Destruct (2016), 
-                    y es el segundo álbum de estudio de la banda que se lanza a través de Blackened. <br><span>Nombre del album: 72 Seasons</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/wMn3znWViSiJ7NFu5">Album</a></span></p>
+                    y es el segundo álbum de estudio de la banda que se lanza a través de Blackened. <br><span>Nombre del album: 72 Seasons</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/wMn3znWViSiJ7NFu5"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>72 Seasons</h1>
             </div>
             <br>
