--- a/discografias/discografia-pantera.html
+++ b/discografias/discografia-pantera.html
@@ -60,7 +60,7 @@
                 <p>Cowboys from Hell es el quinto álbum de estudio y debut con una importante discográfica dela banda estadounidense de heavy metal Pantera, 
                     lanzado el 24 de julio de 1990 por Atco Records . Marcó la primera de muchas colaboraciones con el productor Terry Date. 
                     Este también fue el álbum en el que Pantera abandonó por completo el estilo glam metal de sus álbumes anteriores a favor de un sonido más pesado. 
-                    Ha sido reconocido como uno de los primeros álbumes de groove metal. <br><span>Nombre del album: Cowboys from Hell</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/9p564YFf9tiuKQdG8">Album</a></span></p>
+                    Ha sido reconocido como uno de los primeros álbumes de groove metal. <br><span>Nombre del album: Cowboys from Hell</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/9p564YFf9tiuKQdG8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     
                     <h1>Cowboys from hell</h1>
             </div>
@@ -73,7 +73,7 @@
                 <p>Vulgar Display of Power es el sexto álbum de estudio de labanda estadounidense de heavy metal Pantera. 
                     Lanzado el 25 de febrero de 1992, a través de Atco Records, 
                     fue la segunda colaboración de la banda con el productor Terry Date, 
-                    después de haber trabajado con él en su exitoso álbum Cowboys from Hell (1990). <br><span>Nombre del album: Vulgar Display of Power</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/SdA3RcrjRiCprzU18">Album</a></span></p>
+                    después de haber trabajado con él en su exitoso álbum Cowboys from Hell (1990). <br><span>Nombre del album: Vulgar Display of Power</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/SdA3RcrjRiCprzU18"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Vulgar Display of Power</h1>
             </div>
@@ -87,7 +87,7 @@
                     lanzado el 22 de marzo de 1994 por Elektra Records y East West Records. 
                     El álbum de Pantera con mayores ventas, alcanzó el puesto número 1 en el Billboard 200 y fue certificado Platino por la RIAA. 
                     El álbum también fue certificado Platino por la Asociación Canadiense de la Industria Discográfica. Far Beyond Driven es el primer álbum de Pantera donde el guitarrista de la banda Darrell Abbott es acreditado como "Dimebag Darrell", habiendo cambiado su apodo de "Diamond Darrell" poco despuésdel lanzamiento de Vulgar Display of Power . Las ediciones japonesa y de la Driven Downunder Tour '94 Souvenir Collection contienen una decimotercera pista adicional, 
-                    "The Badge", una versión de Poison Idea. Esta versión también apareció en la banda sonora de The Crow. <br><span>Nombre del album: Far Beyond Driven</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/DrGBBbtqLp4gM39B6">Album</a></span></p>
+                    "The Badge", una versión de Poison Idea. Esta versión también apareció en la banda sonora de The Crow. <br><span>Nombre del album: Far Beyond Driven</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/DrGBBbtqLp4gM39B6"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Far Beyond Driven</h1>
             </div>
@@ -102,7 +102,7 @@
                     Alcanzó el puesto número 4 en la lista Billboard 200 y permaneció en la lista durante 16 semanas. 
                     Durante la producción del álbum, Phil Anselmo grabó las voces en solitario en Nothing Studios de Trent Reznor en Nueva Orleans mientras que Dimebag Darrell, 
                     Rex Brown y Vinnie Paul grabaron la música en Chasin Jason Studios en Dalworthington Gardens . Este sería el último álbum de estudio de Pantera producido por Terry Date,
-                     quien había trabajado con la banda desde Cowboys from Hell (1990). <br><span>Nombre del album: The Great Southern Trendkill</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Y1Ajk9aquyDEQumX6">Album</a></span></p>
+                     quien había trabajado con la banda desde Cowboys from Hell (1990). <br><span>Nombre del album: The Great Southern Trendkill</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Y1Ajk9aquyDEQumX6"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>The Great Southern Trendkill</h1>
             </div>
@@ -116,7 +116,7 @@
                     lanzado el 21 de marzo de 2000 a través de Elektra Records y East West Records. 
                     Este fue el último álbum de estudio que Pantera lanzó antes de su separación de diecinueve años desde noviembre de 2003 hasta julio de 2022, 
                     y es el último álbum de la banda en el que aparecen los hermanos Abbott Dimebag Darrell y Vinnie Paul, 
-                    antes de sus muertes en 2004 y 2018, respectivamente. <br><span>Nombre del album: Reinventing the Steel</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Vpo9cY8EvqEJ4WTn6">Album</a></span></p>
+                    antes de sus muertes en 2004 y 2018, respectivamente. <br><span>Nombre del album: Reinventing the Steel</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Vpo9cY8EvqEJ4WTn6"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Reinventing the Steel</h1>
             </div>
