--- a/discografias/discografia-slipknot.html
+++ b/discografias/discografia-slipknot.html
@@ -57,7 +57,7 @@
                     Fue lanzado el 29 de junio de 1999 por Roadrunner Records, 
                     luego de una demo que contenía algunas de las canciones que se habían lanzado previamente en 1998. Más tarde, 
                     fue reeditado en diciembre de 1999 con una lista de canciones y masterización ligeramente alteradas como resultado de una demanda. Fue el primer lanzamiento de la banda producido por Ross Robinson , quien buscó refinar el sonido de Slipknot en lugar de alterar la dirección musical del grupo. Este es el único álbum que presenta al guitarrista original Josh Brainard, quien se fue al final de la grabación a fines de 1998 mientras la banda se tomaba un breve descanso. Jim Root, quien grabó dos pistas en este punto, 
-                    aparecería a tiempo completo en álbumes posteriores comenzando con su próximo álbum Iowa .. <br><span>Nombre del album: Slipknot</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/zkw9DoBuhKB8nQU17">Album</a></span></p>
+                    aparecería a tiempo completo en álbumes posteriores comenzando con su próximo álbum Iowa .. <br><span>Nombre del album: Slipknot</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/zkw9DoBuhKB8nQU17"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Slipknot Debut</h1>
             </div>
             <br>
@@ -69,7 +69,7 @@
                 <p>Iowa es el segundo álbum de estudio dela banda estadounidense de heavy metal Slipknot . Producido por la banda y Ross Robinson, 
                     fue lanzado el 28 de agosto de 2001 por Roadrunner Records . El título deriva del estado natal de la banda, Iowa, 
                     que los miembros han declarado que es una de sus mayores fuentes de inspiración. Con mucha anticipación por el álbum luego del éxito de su debut homónimo de 1999 , las presiones sobre la banda eran altas. Sus relaciones entre ellos sufrieron y esto más tarde fue descrito como el momento más oscuro de su carrera. [5] También fue el primer álbum completo en presentar al guitarrista Jim Root después de solo aparecer en una canción de su álbum anterior. 
-                    A pesar de los problemas dentro de la banda y con el desarrollo de Iowa , Slipknot lo promocionó durante casi un año. <br><span>Nombre del album: Iowa</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/B338bz27tj4cwU2D9">Album</a></span></p>
+                    A pesar de los problemas dentro de la banda y con el desarrollo de Iowa , Slipknot lo promocionó durante casi un año. <br><span>Nombre del album: Iowa</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/B338bz27tj4cwU2D9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Iowa</h1>
             </div>
             <br>
@@ -81,7 +81,7 @@
                 <p>Vol. 3: (The Subliminal Verses) es el tercer álbum de estudio dela banda estadounidense de heavy metal Slipknot, 
                     lanzado el 25 de mayo de 2004 por Roadrunner Records . Una edición especial, que contiene un disco extra, 
                     fue lanzada el 12 de abril de 2005. Es el único álbum de la banda producido por Rick Rubin . Después de la gira de la banda para promocionar su segundo álbum en 2002, comenzaron las especulaciones sobre el futuro. Algunos miembros de la banda ya habían estado involucrados en proyectos paralelos, incluidos Murderdolls , To My Surprise y la reformación de Stone Sour . En 2003, Slipknot se mudó a The Mansion para trabajar en el álbum. Inicialmente, la banda fue improductiva; el vocalista principal Corey Taylor bebía mucho . Sin embargo, la banda logró escribir material más que suficiente para un nuevo álbum. Vol. 3 se acredita como el primero de Slipknot en incorporar estructuras de canciones más tradicionales y melódicas, 
-                    solos de guitarra e instrumentos acústicos. <br><span>Nombre del album: Vol-3 Subliminal Verses</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uPAYvn7F66pTdBv7A">Album</a></span></p>
+                    solos de guitarra e instrumentos acústicos. <br><span>Nombre del album: Vol-3 Subliminal Verses</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uPAYvn7F66pTdBv7A"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Vol. 3: The Subliminal Verses</h1>
             </div>
             <br>
@@ -93,7 +93,7 @@
                 <p>All Hope Is Gone es el cuarto álbum de estudio dela banda estadounidense de heavy metal Slipknot, 
                     lanzado el 26 de agosto de 2008 por Roadrunner Records . El álbum fue publicado en dos versiones: 
                     el álbum estándar en un estuche de CD y una edición especial empaquetada en un digipak de seis plieguesque contiene tres pistas adicionales, un libreto de 40 páginas y un DVD adicional con un documental de la grabación del álbum. Con una duración de 57 minutos y 57 segundos, es el segundo álbum de estudio más corto de Slipknot detrás de The End, So Far de 2022. También es el último álbum de estudio de la banda que presenta la formación de la era de Iowa con dos miembros de larga data: el bajista y miembro fundador Paul Gray , quien fue encontrado muerto en un hotel de Iowa el 24 de mayo de 2010, casi dos años después del lanzamiento del álbum, 
-                    y el baterista Joey Jordison , quien dejó el grupo en diciembre de 2013. <br><span>Nombre del album: All Hope is Gone</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uu1JL6A7fpbiWXdf8">Album</a></span></p>
+                    y el baterista Joey Jordison , quien dejó el grupo en diciembre de 2013. <br><span>Nombre del album: All Hope is Gone</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/uu1JL6A7fpbiWXdf8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>All Hope is Gone</h1>
             </div>
             <br>
@@ -105,7 +105,7 @@
                 <p>.5: The Gray Chapter es el quinto álbum de estudio dela banda estadounidense de heavy metal Slipknot, lanzado el 17 de octubre de 2014 por Roadrunner Records. 
                     Fue el primer álbum de estudio de la banda en seis años y el primero en no contar con los miembros fundadores originales, el bajista Paul Gray y el baterista Joey Jordison debido a la muerte de Gray en 2010 (el título del álbum es una referencia a su apellido), y el despido de Jordison de la banda a fines de 2013, así como el único álbum de Slipknot que presenta al guitarrista original Donnie Steele en el bajo, aunque se desconocen las pistas en las que tocó, 
                     y el primer álbum de Slipknot en tener a Alessandro Venturella en el bajo y Jay Weinberg en la batería. El álbum incluye seis sencillos y ha recibido éxito comercial y críticas elogiosas. Se lanzó una edición estándar y de lujo del álbum. También es el último álbum de estudio de la banda que presenta a su 
-                    percusionista de toda la vida Chris Fehn antes de su despido de la banda debido a una demanda en marzo de 2019. <br><span>Nombre del album: .5 The Gray Chapter</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/ipHQ5Q2Q8knGkYBx8">Album</a></span></p>
+                    percusionista de toda la vida Chris Fehn antes de su despido de la banda debido a una demanda en marzo de 2019. <br><span>Nombre del album: .5 The Gray Chapter</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/ipHQ5Q2Q8knGkYBx8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>.5: The Gray Chapter</h1>
             </div>
             <br>
@@ -132,7 +132,7 @@
                     Fue lanzado el 30 de septiembre de 2022 a través de Roadrunner Records. 
                     Este es el último álbum de la banda que se lanzará a través de Roadrunner, con quien la banda firmó en 1998. 
                     Es el primer álbum de estudio que presenta al percusionista Michael Pfaff, quien se unió a la banda en 2019 y es su último álbum de estudio que presenta al sampler y 
-                    tecladista Craig Jones y al baterista Jay Weinberg antes de sus respectivas salidas en junio y noviembre de 2023 <br><span>Nombre del album: The End So Far</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/1tNpycJEFQjfFCkEA">Album</a></span></p>
+                    tecladista Craig Jones y al baterista Jay Weinberg antes de sus respectivas salidas en junio y noviembre de 2023 <br><span>Nombre del album: The End So Far</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/1tNpycJEFQjfFCkEA"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>The End So Far</h1>
             </div>
             <br>
