--- a/discografias/discografia-testament.html
+++ b/discografias/discografia-testament.html
@@ -65,11 +65,11 @@
                     Testament era conocido como Legacy. Su formación estaba formada por el cantante Steve "Zetro" Souza,
                     los guitarristas Alex Skolnick y Eric Peterson , el bajista Greg Christian y el baterista Louie
                     Clemente.
-                    El cantante Chuck Billy era miembro de otra banda local llamada Guilt. [1] Había actuado con Legacy
+                    El cantante Chuck Billy era miembro de otra banda local llamada Guilt. Había actuado con Legacy
                     en algunas ocasiones y
                     se le pidió que se convirtiera en el nuevo cantante después de que Souza se fuera para unirse a
                     Exodus. <br><span>Nombre del album: The Legacy</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/An6xQBi7K5EqvQAN9">Album</a></span></p>
+                            href="https://deezer.page.link/An6xQBi7K5EqvQAN9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The Legacy</h1>
             </div>
             <br>
@@ -91,7 +91,7 @@
                     canciones más interpretadas de Testament; las tres se han tocado en vivo más de 600 veces,
                     siendo la primera de las tres su canción más tocada en vivo. <br><span>Nombre del album: The new
                         order</span> <br><span>Escucha el album comleto aqui! > <a
-                            href="https://deezer.page.link/GgzAs7h935Jo4YMy5">Album</a></span></p>
+                            href="https://deezer.page.link/GgzAs7h935Jo4YMy5"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The new order</h1>
             </div>
             <br>
@@ -109,7 +109,7 @@
                     este álbum fue un gran avance para Testament, alcanzando un estatus cercano al disco de oro y
                     convirtiéndose en el primer álbum de la banda en ingresar al Top 100 en lalista Billboard 200.
                     <br><span>Nombre del album: Practice what you preach</span> <br><span>Escucha el album completo
-                        aqui! > <a href="https://deezer.page.link/q7ZeiqF6oiNpwTJj7">Album</a></span></p>
+                        aqui! > <a href="https://deezer.page.link/q7ZeiqF6oiNpwTJj7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Practice what you preach</h1>
             </div>
             <br>
@@ -133,7 +133,7 @@
                     reemplazando a Alex Perialas,
                     quien manejó este papel en los tres álbumes anteriores de la banda. <br><span>Nombre del album:
                         Souls of black</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/18u4SarXMjR13HNy8">Album</a></span></p>
+                            href="https://deezer.page.link/18u4SarXMjR13HNy8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Souls fo black</h1>
             </div>
             <br>
@@ -152,7 +152,7 @@
                     coeditados por Megaforce Records . Producido por Tony Platt,
                     el álbum marcó un importante cambio estilístico para la banda, moviéndose hacia unsonido de heavy
                     metal. <br><span>Nombre del album: The ritual</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/63A433SWVxwovX2g9">Album</a></span></p>
+                            href="https://deezer.page.link/63A433SWVxwovX2g9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The ritual</h1>
             </div>
             <br>
@@ -168,7 +168,7 @@
                     Louie Clemente,
                     que fueron remplazados por James Murphy y John Tempesta respectivamente. <br><span>Nombre del album:
                         Low</span> <br><span>Escuha el album completo aqui! > <a
-                            href="https://deezer.page.link/gGVxU92VWM9JZDuF9">Album</a></span></p>
+                            href="https://deezer.page.link/gGVxU92VWM9JZDuF9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>low</h1>
             </div>
             <br>
@@ -187,7 +187,7 @@
                     Apocalyptic City . Demonic también fue el único álbum de Testament con Hoglan durante 15 años,
                     hasta que se reincorporó y actuó en el álbum Dark Roots of Earth (2012). <br><span>Nombre del album:
                         Demonic</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/KzhVnrCYmr8pTfEu7">Album</a></span></p>
+                            href="https://deezer.page.link/KzhVnrCYmr8pTfEu7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Demonic</h1>
             </div>
             <br>
@@ -207,7 +207,7 @@
                     para Lombardo,
                     quien había dejado la banda poco después del lanzamiento de The Gathering. <br><span>Nombre del
                         album: The Gathering</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/piFF1YwLgQbpvCTr6">Album</a></span></p>
+                            href="https://deezer.page.link/piFF1YwLgQbpvCTr6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>The Gathering</h1>
             </div>
             <br>
@@ -227,7 +227,7 @@
                     así como el único álbum de estudio de la banda grabado con el baterista Paul Bostaph , quien se unió
                     a Testament en 1993 pero se convirtió en miembro de tiempo completo en 2007 antes de dejar la banda
                     cuatro años después. <br><span>Nombre del album: The Formation of Damnation</span> <br><span>Escucha
-                        el album completo aqui! > <a href="https://deezer.page.link/VauFRwiT7HoyYGy57">Album</a></span>
+                        el album completo aqui! > <a href="https://deezer.page.link/VauFRwiT7HoyYGy57"><i class="fa-brands fa-spotify"></i></a></span>
                 </p>
                 <h1>The Formation of damnation</h1>
             </div>
@@ -251,7 +251,7 @@
                     12,
                     la posición más alta de Testament en la historia. <br><span>Nombre del album: Dark Roots of
                         Earth</span> <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/iBpAuFDnEQSNbhND7">Album</a></span></p>
+                            href="https://deezer.page.link/iBpAuFDnEQSNbhND7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Dark Roots of Earth</h1>
             </div>
             <br>
@@ -272,7 +272,7 @@
                     segundo álbum de Testament con mayor posición en los EE. UU.,
                     detrás de Dark Roots of Earth , que alcanzó el puesto número doce cuatro años antes.
                     <br><span>Nombre del album: Brotherhood of snake</span> <br><span>Escuchalo completo aqui! > <a
-                            href="https://deezer.page.link/DK2JPaQok2NhDR2Z7">Album</a></span></p>
+                            href="https://deezer.page.link/DK2JPaQok2NhDR2Z7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Brotherhood of Snake</h1>
             </div>
             <br>
@@ -292,7 +292,7 @@
                     anteriormente trabajó con los dos álbumes de estudio de Testament Dark Roots of Earth (2012) y
                     Brotherhood of the Snake (2016). <br><span>Nombre del album: Titans of creation</span>
                     <br><span>Escucha el album completo aqui! > <a
-                            href="https://deezer.page.link/rf5XzyuhkSE4q8VH6">Album</a></span></p>
+                            href="https://deezer.page.link/rf5XzyuhkSE4q8VH6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Titans of creation</h1>
             </div>
             <br>
