--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -31,12 +31,12 @@
 
             <div class="inputContainer">
                 <input type="email" class="input" placeholder="Ingresa tu email" required> 
-                <label class="label">Email</label>
+                <label class="label"><i class="fa-solid fa-envelope"></i></label>
             </div>
 
             <div class="inputContainer">
                 <input type="password" class="input" placeholder="Ingresa tu contraseña" required>
-                <label for="" class="label">Contraseña</label>
+                <label for="" class="label"><i class="fa-solid fa-lock"></i></label>
             </div>
             <a href="registro.html"><h3>¿No tienes cuenta?</h3></a>
             <input type="submit" class="submitBtn" value="Accede">
