--- a/registro.html
+++ b/registro.html
@@ -42,21 +42,21 @@
             <div class="inputContainer">
                 <span>Por favor, introduzca una dirección de correo electrónico: </span>
                 <input id="email"  type="email" class="input" placeholder="Ingresa tu email" required>
-                <label for="" class="label">Email</label>
+                <label for="" class="label"><i class="fa-solid fa-envelope"></i></label>
             </div>
 
             <div class="inputContainer">
                 <input id="usuario" type="text" class="input" placeholder="Ingresa tu nombre" required>
-                <label for="" class="label">Nombre</label>
+                <label for="" class="label"><i class="fa-solid fa-circle-user"></i></label>
             </div>
             <div class="inputContainer">
                 <input type="password" class="input" placeholder="Ingresa tu contraseña" required>
-                <label for="" class="label">Contraseña</label>
+                <label for="" class="label"><i class="fa-solid fa-lock"></i></label>
                 <span toggle="#passwordInput" class="eye toggle-password"><i class="fa fa-eye-slash"></i></span>
             </div>
             <div class="inputContainer">
                 <input type="password" class="input" placeholder="Confirma tu contraseña" required>
-                <label for="" class="label">Confrma tu Contraseña</label> 
+                <label for="" class="label"><i class="fa-solid fa-lock"></i></label> 
             </div>
             <a href="iniciar-sesion.html"><h3>¿Ya tienes cuenta?</h3></a>
             <input type="submit" class="submitBtn" value="Registrarse" id="btn-enviar">
@@ -68,11 +68,11 @@
             <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
             <h4>Developer: Nicolas  &copy;2024</h4>
             <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
-            <!--- ICONOS --->
-            <i class="fab fa-facebook"><a href="">Facebook</a></i>
-            <i class="fab fa-twitter"><a href="">Twitter</a></i>
-            <i class="fab fa-instagram"><a href="">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <!--- ICONOS DE FONT AWESOME --->
+            <i class="fab fa-facebook"><a href="#">Facebook</a></i>
+            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fab fa-instagram"><a href="#">Instagram</a></i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
